# broker/app/models/tool.rb
@@ -1,0 +1,4 @@
+class Tool < ApplicationRecord
+  validates :name, presence: true
+  validates :repo_url, presence: true
+end
